# krypto

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cpp/: CMakeLists.txt  build.profile  conanfile.txt
cpp/include/krypto/: config.h  http.h  logger.h  types.h
cpp/include/krypto/concurrency/: timer.h
cpp/include/krypto/exchanges/: base.h  coinbase.h  factory.h
cpp/include/krypto/exchanges/coinbase/: api.h  auth.h  types.h
cpp/include/krypto/instruments/: client.h  instrument_factory.h  loader.h  message_types.h  protocol.h  server.h
cpp/include/krypto/instruments/exchanges/: coinbase.h  instrument.h  parser.h
cpp/include/krypto/mktdata/: convert.h  gateway.h  protocol.h  pub.h  redis_publisher.h  ws_server.h
cpp/include/krypto/mktdata/coinbase/: book_builder.h  server.h  ws.h
cpp/include/krypto/network/: helper.h  proxy.h  publisher.h  subscriber.h
cpp/include/krypto/network/mktdata/: incr.h  snap.h  top_of_book.h
cpp/include/krypto/network/rpc/: broker.h  client.h  worker.h
cpp/include/krypto/orders/: client.h  gateway.h  manager.h  protocol.h
cpp/include/krypto/orders/coinbase/: server.h
cpp/include/krypto/orders/sim/: server.h
cpp/include/krypto/pricing/: client.h  ewma.h  pub.h  server.h
cpp/include/krypto/risk/: position_manager.h  server.h
cpp/include/krypto/serialization/: helper.h  serialization_generated.h
cpp/include/krypto/utils/: common.h  date_time.h  http.h  message_types.h  order_id.h  types.h
cpp/src/apps/instruments/: server_main.cpp
cpp/src/apps/mktdata/: coinbase_main.cpp  mktdata_cache_main.cpp  mktdata_gateway_main.cpp
cpp/src/apps/network/: proxy_main.cpp
cpp/src/apps/orders/: coinbase_main.cpp  order_gateway_main.cpp  sim_main.cpp
cpp/src/apps/pricing/: krypto_pricing_server_main.cpp
cpp/src/apps/ui/: demo.cpp  imgui_impl_opengl3.h  main.cpp
cpp/src/apps/ws/: ws_server_main.cpp
cpp/src/examples/: coinbase_api_main.cpp  mktdata_printer_main.cpp  query_instruments_main.cpp  sim_order_client_main.cpp  theo_printer_main.cpp  timer_test_main.cpp
cpp/src/krypto/: config.cpp  http.cpp  logger.cpp
cpp/src/krypto/exchanges/coinbase/: api.cpp  auth.cpp
cpp/src/krypto/instruments/: client.cpp  loader.cpp  server.cpp
cpp/src/krypto/instruments/exchanges/: coinbase.cpp
cpp/src/krypto/mktdata/: gateway.cpp  protocol.cpp  pub.cpp  redis_publisher.cpp  ws_server.cpp
cpp/src/krypto/mktdata/coinbase/: book_builder.cpp  server.cpp  ws.cpp
cpp/src/krypto/network/: helper.cpp  proxy.cpp
cpp/src/krypto/network/mktdata/: incr.cpp  snap.cpp  top_of_book.cpp
cpp/src/krypto/orders/: client.cpp  gateway.cpp  manager.cpp  protocol.cpp
cpp/src/krypto/orders/coinbase/: server.cpp
cpp/src/krypto/orders/sim/: server.cpp
cpp/src/krypto/pricing/: client.cpp  ewma.cpp  pub.cpp  server.cpp
cpp/src/krypto/risk/: position_manager.cpp  server.cpp
cpp/src/krypto/serialization/: helper.cpp
cpp/src/krypto/utils/: common.cpp  date_time.cpp  http.cpp  types.cpp
cpp/src/serialization/: helper.cpp
cpp/src/tests/: test_auth.cpp  test_serialize.cpp
include/krypto/: config.h  http.h  root_certificates.h  types.h
include/krypto/common/: exchange.h  instrument.h  startup.h
include/krypto/exchanges/: base.h  coinbase.h  factory.h
include/krypto/instruments/: client.h  loader.h  message_types.h  parser.h  protocol.h  server.h  store.h
include/krypto/mktdata/: book.h  client.h  convert.h  parser.h  ws_server.h
include/krypto/mktdata/coinbase/: book_builder.h  server.h  ws.h
include/krypto/network/: helper.h  proxy.h  publisher.h  subscriber.h
include/krypto/network/majordomo/: broker.h  client.h  mdp.h  worker.h
include/krypto/network/mktdata/: incr.h  quote.h  snap.h  top_of_book.h  trade.h
include/krypto/network/rpc/: async_client.h  broker.h  client.h  worker.h
include/krypto/orders/: client.h  protocol.h
include/krypto/orders/sim/: server.h
include/krypto/serialization/: serialization_generated.h
include/krypto/utils/: common.h  date_time.h  enum.h  id_gen.h
java/: build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/proto/: krypto.proto
java/src/main/resources/: config.hocon  config.json  log4j2.yaml
python/: coinbase_api.py
resources/: build.profile  config.hocon  config.json  config.yaml  krypto.proto  serialization.fbs
scripts/: build.profile  conanfile.txt  preprocess.sh
src/apps/: config_loader_main.cpp
src/apps/coinbase/: mktdata.cpp
src/apps/instruments/: main.cpp  server_main.cpp
src/apps/mktdata/: coinbase_main.cpp
src/apps/network/: broker_main.cpp
src/apps/orders/: sim_main.cpp
src/apps/ui/: demo.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  main.cpp
src/apps/ws/: ws_server_main.cpp
src/examples/: mktdata_printer_main.cpp  query_instruments_main.cpp  sim_order_client_main.cpp
src/krypto/: config.cpp  http.cpp  logger.cpp
src/krypto/common/: exchange.cpp  instrument.cpp
src/krypto/instruments/: client.cpp  loader.cpp  message_types.cpp  parser.cpp  protocol.cpp  server.cpp  store.cpp
src/krypto/mktdata/: parser.cpp  protocol.cpp  ws_server.cpp
src/krypto/mktdata/coinbase/: book_builder.cpp  ws.cpp
src/krypto/network/: helper.cpp  proxy.cpp
src/krypto/network/majordomo/: broker.cpp  mdp.cpp
src/krypto/network/mktdata/: incr.cpp  quote.cpp  snap.cpp  top_of_book.cpp  trade.cpp
src/krypto/orders/: client.cpp  protocol.cpp
src/krypto/utils/: common.cpp  date_time.cpp
ui/: .babelrc  .eslintrc  main.js  package.json  webpack.config.babel.js
ui/src/: App.js  constants.js  index.js  store.js
ui/src/actions/: globalActions.js  instrumentActions.js  mktdataActions.js
ui/src/components/: ApplicationLayout.js  Content.js  Sidebar.js  Test.js
ui/src/config/: index.js
ui/src/krypto/: index.js  serialization_generated.js  serializaton_generated.js
ui/src/layouts/: App.js
ui/src/reducers/: globalReducer.js  index.js  instrumentsReducer.js  mktdataReducer.js
ui/src/routes/: Root.js  index.js
ui/src/themes/: App.global.scss
ui/src/utils/: zmq.js
(+148 files in other folders)
